--- a/Project_prototype Rishabh/manifest.json
+++ b/Project_prototype Rishabh/manifest.json
@@ -1,26 +1,33 @@
 {
-    "manifest_version": 3,
-    "name": "Custom Eye Tracking Arrow",
-    "version": "1.0",
-    "description": "Simulates eye tracking with a customizable arrow",
-    "content_scripts": [
-      {
-        "matches": ["http://localhost:8000/"],
-        "js": ["content.js"]
-      }
-    ],
-    "permissions": ["storage",
-    "https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"
-    ],
-
-    "background": {
-        "service_worker": "background.js"
-    },
-    "action": {
-      "default_popup": "options.html"
-    },
-    "content_security_policy": {
-      "extension_pages": "script-src 'self'; object-src 'self'",
-      "sandbox": "sandbox allow-scripts"
+  "manifest_version": 3,
+  "name": "RP-help Demo",
+  "version": "1.0",
+  "description": "A Chrome extension to assist people with retinitis pigmentosa.",
+  "permissions": [
+    "activeTab",
+    "storage"
+  ],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"]
     }
-  }
+  ],
+  "action": {
+    "default_popup": "index.html",
+    "default_icon": {
+      "16": "images/icon.png",
+      "48": "images/icon.png",
+      "128": "images/icon.png"
+    }
+  },
+  "icons": {
+    "16": "images/icon.png",
+    "48": "images/icon.png",
+    "128": "images/icon.png"
+  },
+  "options_page": "options.html"
+}
